comments.comment_typeをtypeにする Fixes #338
